kubernetes/apps/default/freepbx/app/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freepbx
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: freepbx
  template:
    metadata:
      labels:
        pod: freepbx
    spec:
#      securityContext:
#        sysctls:
#        # Allows ICMP traffic (ping, traceroute) to resources behind cloudflared.
#          - name: net.ipv4.ping_group_range
#            value: "65532 65532"
      containers:
        - image: tiredofit/freepbx:5.2.0
          name: freepbx
          livenessProbe:
            httpGet:
              # Cloudflared has a /ready endpoint which returns 200 if and only if
              # it has an active connection to Cloudflare's network.
              path: /ready
              port: 2000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
