kubernetes/apps/default/freepbx/app/udp-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: udp-gateway
spec:
  gatewayClassName: envoy
#  addresses:
#    - type: IPAddress
#      value: "10.9.1.254"
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "10.9.1.254"
  listeners:
  - name: pjsip-udp
    protocol: UDP
    port: 5060
    allowedRoutes:
      kinds:
      - kind: UDPRoute
