kubernetes/apps/default/freepbx/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: freepbx
spec:
  hostnames: ["${ .Release.Name }.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: freepbx
          namespace: default
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
